<resources>
    <string name="app_name">Roomie</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Must contain at least 8 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="logo_of_app">App Logo</string>
    <string name="title_string">roomie</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="button_string">login</string>
    <string name="city_logo_description">City Logo</string>
    <string name="forgot_password">forgot password?</string>
    <string name="switch_action_or">OR</string>
    <string name="sign_up">sign up</string>
    <string name="people_picture">People Picture</string>


    <string name="swipe_left">Swipe left</string>
    <string name="swipe_right">Swipe right</string>
    <string name="view_swiped_left">%1$s swiped to left!</string>
    <string name="view_swiped_right">%1$s swiped to right!</string>
    <string name="dummy_text">Test</string>
    <string name="dummy_fab">Fab Test</string>

    <string name="reset">Reset stack</string>
    <string name="stack_reset">Stack reset!</string>
    <string name="stack_empty">Card stack empty!</string>
    <string name="github">View on GitHub</string>


    <string name="signup_title">sign up</string>
    <string name="fullname_reg">Full Name</string>
    <string name="username_reg">Username</string>
    <string name="email_reg">Email Address</string>
    <string name="password_reg">Password</string>
    <string name="password2_reg">Re-enter Password</string>
    <string name="sign_in_back">Sign In</string>
    <string name="have_an_account">Have an account?\u0020</string>
    <string name="next_btn">next</string>

    <string name="traits_title">interests</string>
    <string name="sleep_schedule">Sleep Schedule: </string>
    <string name="clean_schedule">Cleaning Habits: </string>
    <string name="eat_schedule">Eating Habits you want in your roommate:</string>
    <string name="study_schedule">Study Habits: </string>
    <string name="social_schedule">Social Schedule: </string>
    <string name="temp_schedule">Room Temperature Preference: </string>
    <string name="apartment">Do you already have an apartment? </string>
    <string name="dorm">Dorm or Suite? </string>

    <string name="card_name">Regina Phalange</string>

</resources>
