<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/primary_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/linear_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_card"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="16dp"
            tools:targetApi="lollipop">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/city_logo_description"
                app:srcCompat="@drawable/city_logo" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:shadowColor="#f4f4f4"
                android:text="@string/title_string"
                android:textColor="#ffffff"
                android:textSize="40sp"
                app:fontFamily="@font/lato_regular" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="280dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/email_hint"
            android:textColorHint="@color/colorPrimaryDark"
            app:errorEnabled="true"
            app:fontFamily="@font/lato_regular">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="280dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:hint="@string/password_hint"
            android:textColorHint="@color/colorPrimaryDark"
            app:errorEnabled="true"
            app:fontFamily="@font/lato_regular"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_in_button"
            style="@style/Widget.Roomie.Button"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:fontFamily="@font/lato_light"
            android:text="@string/button_string"
            android:textSize="20sp"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/pass_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textSize="12sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/signup_button"
        android:layout_below="@id/primary_layout">

        <TextView
            android:id="@+id/switch_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/switch_action_or"
            android:textColor="@android:color/darker_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/switch_action"
            android:background="@android:color/darker_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/switch_action"
            android:background="@android:color/darker_gray" />

    </RelativeLayout>

    <Button
        android:id="@+id/signup_button"
        style="@style/Widget.Roomie.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/lato_light"
        android:text="@string/sign_up"
        android:textSize="20sp"
        tools:targetApi="jelly_bean" />


</RelativeLayout>
