<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp.SignUpActivity1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/login_card">

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="350dp"
        android:layout_height="650dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="94dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="3dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:text="@string/signup_title"
                android:textColor="#5B56D5"
                android:textSize="35sp"
                app:fontFamily="@font/poiret_one" />

            <RelativeLayout
                android:id="@+id/mid_content_1"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fullname_text_input"
                    app:boxStrokeColor="#A194F9"
                    app:boxStrokeWidth="2dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="240dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/fullname_reg"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:errorEnabled="true"
                    app:fontFamily="@font/lato_regular">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textCapWords"
                        android:maxLines="1"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_reg_text_input"
                    app:boxStrokeColor="#A194F9"
                    app:boxStrokeWidth="2dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="240dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/fullname_text_input"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:hint="@string/email_reg"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:errorEnabled="true"
                    app:fontFamily="@font/lato_regular">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_reg_text_input"
                    app:boxStrokeColor="#A194F9"
                    app:boxStrokeWidth="2dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="240dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/email_reg_text_input"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password_reg"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:errorEnabled="true"
                    app:fontFamily="@font/lato_regular"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password2_reg_text_input"
                    app:boxStrokeColor="#A194F9"
                    app:boxStrokeWidth="2dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="240dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/password_reg_text_input"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password2_reg"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:errorEnabled="true"
                    app:fontFamily="@font/lato_regular"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password2_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/nxt_final_field"
                android:layout_width="179dp"
                android:layout_height="116dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <Button
                    android:id="@+id/next_reg_button_1"
                    android:textColor="@color/white"
                    style="@style/Main.UnelevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_above="@id/signin_back1"
                    android:layout_centerHorizontal="true"
                    android:text="@string/next_btn" />


                <RelativeLayout
                    android:id="@+id/signin_back1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/reg_chk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_light"
                        android:paddingBottom="16dp"
                        android:text="@string/have_an_account"
                        android:textColor="#B5B5B5"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/signin_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/reg_chk"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/lato_light"
                        android:paddingBottom="16dp"
                        android:text="@string/sign_in_back"
                        android:textColor="#756BFF"
                        android:textSize="16sp" />

                </RelativeLayout>

            </RelativeLayout>


        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>
